# IRTriageCMD

./: .gitignore  README.md  toolchain-mingw.cmake
base/shell/cmd/: CMakeLists.txt  alias.c  assoc.c  attrib.c  batch.c  beep.c  choice.c  cls.c  cmd.c  cmddbg.c  cmdinput.c  compat.h  conutils_compat.h  ndk_compat.h  precomp.h
pcmd/: CMakeLists.txt  cmd.c  cmd.rc
